# Fock_Space_Neural_Network

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/tabular/: adult.yaml
configs/vision/: mnist.yaml
notebooks/: FSNN.ipynb  FSNN_V2 copy.ipynb  FSNN_V2.ipynb  FSNN_V3.ipynb
scripts/: download_data.py  eval.py  train.py
src/fsnn/: __init__.py
src/fsnn/core/: __init__.py  dynamic_linear.py  fsnn_mlp.py
src/fsnn/utils/: __init__.py  data.py  measure.py  seed.py
tests/: test_sanity.py
